examples/test/testpolicy5289.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5289
  namespace: namespace60
spec:
  podSelector:
    matchLabels:
      key29: value36
      key38: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value6
          key21: value49
          key18: value1
      podSelector:
        matchLabels:
          key43: value9
          key24: value13
          key36: value40
